devops-08-kubernetes/kubernetes-3.3-network-works-K8s/src/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-application
  namespace: app
spec:
  selector:
    matchLabels:
      app: back
  replicas: 1
  template:
    metadata:
      labels:
        app: back
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: back-svc
  namespace: app
spec:
  selector:
    app: back
  ports:
    - protocol: TCP
      name: multitool
      port: 9002
      targetPort: 1180
