devops-08-kubernetes/kubernetes-3.3-network-works-K8s/src/back-to-cache.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: back-to-cache
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: cache
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: back
      ports:
        - protocol: TCP
          port: 1180
